test/samples/valid/never.maruir
fun foo(a: u256): never 
{
entry:
	abort;
}
