test/samples/invalid/resolving/pointer_to_tv.maruir
fun foo<;T>(arg: T *#memory) {
}
